# PyTOUGH

./: .gitignore  .readthedocs.yaml  IAPWS97.py  README  README.md  fixed_format_file.py  geometry.py  mulgrids.py  pyproject.toml  setup.py  t2data.py  t2grids.py  t2incons.py  t2listing.py  t2thermo.py
.github/workflows/: publish.yml  pythontest.yml
doc/: IAPWS97.tex  Makefile  PyTOUGH-guide.tex  PyTOUGH.bib  PyTOUGH.bst  UoA_logo.eps  appendix_geometry_format.tex  coverpic.eps  introduction.tex  makefile  mulgrids.tex  ptplot.eps  t2data.tex  t2grids.tex  t2incons.tex  t2listing.tex  t2thermo.tex  titlepage.tex
doc/source/: commandref.rst  conf.py  iapws97.rst  index.rst  intro.rst  mulformat.rst  mulgrids.rst  requirements.txt  t2data.rst  t2grids.rst  t2incon.rst  t2listing.rst  t2thermo.rst
tests/: test_IAPWS97.py  test_geometry.py  test_mulgrid.py  test_t2data.py  test_t2grid.py  test_t2incon.py  test_t2listing.py  test_t2thermo.py
tests/data/AUTOUGH2/1/: case1_blocks.npy  case1_connections.npy  case1_generators.npy  case1_rocks.npy
tests/data/AUTOUGH2/2/: case2_blocks.npy  case2_connections.npy  case2_generators.npy  case2_rocks.npy
tests/data/AUTOUGH2/3/: a1.pdat  a1_blocks.npy  a1_connections.npy  a1_generators.npy  a1_rocks.npy
tests/data/TOUGH2-MP/1/: MESHA  MESHB  rfp_nomesh  rfp_nomesh_blocks.npy  rfp_nomesh_connections.npy  rfp_nomesh_generators.npy  rfp_nomesh_rocks.npy
tests/data/TOUGH2/1/: MESH  r1q  (+4 more)
tests/mulgrid/: fit_surface_data.npy  fit_surface_result.npy  fit_surface_result_g1.npy  gmsh.msh  gmsh4_1.msh  in  refine_areas.npy  segmt
(+159 files in other folders)
